--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ easydict
 h5py
 matplotlib
 numpy
-open3d==0.9
+open3d==0.10
 opencv-python
 pyyaml
 scipy
@@ -12,3 +12,7 @@ timm==0.4.5
 tqdm
 transforms3d
 termcolor
+dipy
+scikit-learn
+networkx
+thop
